fixed scrollbar offesting site content to the left

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -33,18 +33,24 @@ main {
 
 body {
 	background-color: #073642;
+	padding-left: calc(100vw - 100%);
 }
 
 .body-wrapper {
 	display: flex;
 	justify-content: center;
+	// overflow: hidden;
 }
+
+// .header-wrapper {
+// 	width: 1000px;
+// }
 
 .sections-container {
 	display: flex;
   flex-direction: column;
   align-items: flex-start;
-	width: 1000px;
+	min-width: 1000px;
 }
 
 .main-wrapper {
@@ -108,13 +114,13 @@ h2:last-child {
 }
 
 @media (max-width: $medium-breakpoint) {
-	// h2:not(:last-child) {
-	// 	margin-bottom: $large;
-	// }
-	//
-	// h2 + p {
-	// 	margin-top: -$large;
-	// }
+	h2:not(:last-child) {
+		margin-bottom: $large;
+	}
+
+	h2 + p {
+		margin-top: -$large;
+	}
 }
 
 p {
